@@ -1,1 +1,3 @@
 ytconfig.lisp
+.cvsignore
+code.gbg
